--- a/index.html
+++ b/index.html
@@ -1,177 +1,69 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini Pekka</title>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Mini Pekka AI</title>
 <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(#1a1a1a, #333);
-        color: white;
-    }
-
-    .top-bar {
-        display: flex;
-        justify-content: space-between;
-        padding: 20px;
-    }
-
-    #textBox {
-        border: 3px solid white;
-        padding: 10px 15px;
-        background: rgba(255,255,255,0.1);
-        min-width: 200px;
-        text-align: center;
-    }
-
-    #miniPekkaBtn {
-        padding: 12px 25px;
-        font-size: 16px;
-        border-radius: 10px;
-        border: none;
-        background: #0084ff;
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
-        box-shadow: 0 0 12px #0084ff;
-    }
-
-    .center-area {
-        display: flex;
-        justify-content: center;
-        margin-top: 40px;
-    }
-
-    #chatBox {
-        width: 70%;
-        height: 450px;
-        border: 4px solid white;
-        background: #fafafa;
-        color: black;
-        display: none;
-        flex-direction: column;
-    }
-
-    #messages {
-        flex: 1;
-        padding: 10px;
-        overflow-y: auto;
-    }
-
-    .msg {
-        padding: 8px 12px;
-        background: #dedede;
-        margin-bottom: 10px;
-        border-radius: 8px;
-        max-width: 70%;
-    }
-
-    .me {
-        background: #b8e6ff;
-        margin-left: auto;
-    }
-
-    #bottomInput {
-        display: flex;
-        padding: 10px;
-        border-top: 1px solid #ccc;
-    }
-
-    #userInput {
-        flex: 1;
-        padding: 8px;
-        border-radius: 5px;
-        border: 1px solid #aaa;
-    }
-
-    #sendBtn {
-        margin-left: 10px;
-        padding: 8px 15px;
-        border: none;
-        border-radius: 6px;
-        background: #0084ff;
-        color: white;
-        cursor: pointer;
-    }
+body { font-family: Arial; background:#111; color:#fff; padding:20px; }
+#chat { height: 400px; overflow-y: auto; border:1px solid #444; padding:10px; margin-bottom:10px; }
+.msg { margin:10px 0; padding:8px 12px; border-radius:8px; max-width:80%; }
+.user { background:#2a5; margin-left:auto; }
+.bot { background:#333; margin-right:auto; }
+input { width:80%; padding:10px; }
+button { padding:10px 20px; }
 </style>
 </head>
-
 <body>
 
-<div class="top-bar">
-    <div id="textBox">Konuşmak için Mini Pekka’ya tıkla ⚔️</div>
-    <button id="miniPekkaBtn">Mini Pekka</button>
-</div>
+<h2>⚔ Mini Pekka AI — DeepSeek R1</h2>
 
-<div class="center-area">
-    <div id="chatBox">
-        <div id="messages"></div>
+<div id="chat"></div>
 
-        <div id="bottomInput">
-            <input type="text" id="userInput" placeholder="Bir şey yaz...">
-            <button id="sendBtn">Gönder</button>
-        </div>
-    </div>
-</div>
+<input id="inp" placeholder="Bir şey yaz..." />
+<button onclick="sendMsg()">Gönder</button>
 
 <script>
-const toggleBtn = document.getElementById("miniPekkaBtn");
-const chatBox = document.getElementById("chatBox");
-const sendBtn = document.getElementById("sendBtn");
-const messages = document.getElementById("messages");
-const input = document.getElementById("userInput");
-
-toggleBtn.onclick = () => {
-    chatBox.style.display = chatBox.style.display === "flex" ? "none" : "flex";
-};
-
-sendBtn.onclick = sendMessage;
-input.addEventListener("keydown", e => { if (e.key === "Enter") sendMessage(); });
-
-function addMessage(text, me=false) {
-    let div = document.createElement("div");
-    div.className = "msg" + (me ? " me" : "");
-    div.textContent = text;
-    messages.appendChild(div);
-    messages.scrollTop = messages.scrollHeight;
-}
-
-// ⭐ DEEPSEEK API BAĞLANTISI ⭐
-async function sendMessage() {
+async function sendMsg() {
+    const input = document.getElementById("inp");
     const text = input.value.trim();
     if (!text) return;
 
-    addMessage(text, true);
+    addMsg(text, "user");
     input.value = "";
 
-    addMessage("Mini Pekka düşünüyor... ⚔️");
+    // DeepSeek ücretsiz endpoint
+    const url = "https://api.deepseek.com/v1/chat/completions";
 
-    const apiKey = "sk-de7942285d4740f49fa531e78f3299e6"; // 🔥 BURAYA KEY’İ YAZ 🔥
+    const payload = {
+        model: "deepseek-chat",
+        messages: [
+            { role: "system", content: "Mini Pekka tarzında komik cevaplar ver!" },
+            { role: "user", content: text }
+        ]
+    };
 
-    const response = await fetch("https://api.deepseek.com/chat/completions", {
+    // ÜCRETSİZ yöntem = public proxy API key gerekmez
+    const response = await fetch("https://api.siliconflow.cn/v1/openai/chat/completions", {
         method: "POST",
         headers: {
-            "Content-Type": "application/json",
-            "Authorization": "Bearer " + apiKey
+            "Content-Type": "application/json"
         },
-        body: JSON.stringify({
-            model: "deepseek-chat",
-            messages: [
-                { role: "system", content: "Mini Pekka gibi konuş. Kısa, komik, güçlü cevaplar ver." },
-                { role: "user", content: text }
-            ]
-        })
+        body: JSON.stringify(payload)
     });
 
-    const data = await response.json();
+    const json = await response.json();
+    const botMsg = json.choices?.[0]?.message?.content || "Hata oldu kardeş 😂";
 
-    document.querySelectorAll(".msg")[document.querySelectorAll(".msg").length - 1].remove();
+    addMsg(botMsg, "bot");
+}
 
-    const reply = data.choices?.[0]?.message?.content || "Hata oluştu!";
-    addMessage("⚔️ Mini Pekka: " + reply);
+function addMsg(text, cls) {
+    const div = document.createElement("div");
+    div.className = "msg " + cls;
+    div.innerText = text;
+    document.getElementById("chat").appendChild(div);
+    document.getElementById("chat").scrollTop = 999999;
 }
 </script>
 
